# libxml-repro

./: Cargo.toml  base64_saml_response.txt
src/: main.rs
